package NTurboLogin;

message TPlainText {
    optional string Uid = 1;
    optional string Domain = 2;
    optional uint64 Timestamp = 3;
    optional uint64 FingerPrint = 4;
}
